# modified-wdf2

./: .gitignore  CMakeLists.txt  README.md
include/: timer.h
python-version/: mwdf2.py  wdf.py
src/: main.cpp  mwdf.cpp  mwdf.h
